[gd_scene load_steps=22 format=4 uid="uid://bkq5p8mqc8qx4"]

[ext_resource type="Script" path="res://Scripts/loading_screen.gd" id="1_ra1hy"]
[ext_resource type="Texture2D" uid="uid://bqstpjuldrbmd" path="res://Assets/sprites/Baron_Run-Sheet.png" id="2_p5l33"]
[ext_resource type="Texture2D" uid="uid://dq7ewbd8ns3y" path="res://Assets/sprites/HBDB_STATIC_BG - Copy (2).png" id="2_qlx58"]
[ext_resource type="Texture2D" uid="uid://bh6pt2nrbuan0" path="res://Assets/sprites/PARALLAX_MOON - Copy.png" id="3_tshe0"]
[ext_resource type="Texture2D" uid="uid://qmv66rode5y5" path="res://Assets/sprites/PARALLAX_HILLS - Copy.png" id="4_rjyvq"]
[ext_resource type="Texture2D" uid="uid://hvwj8xycsv3j" path="res://Assets/sprites/PARALLAX_FOG - Copy.png" id="5_0706j"]
[ext_resource type="Texture2D" uid="uid://b4m184hshmso5" path="res://Assets/sprites/MOON - Copy.png" id="6_1bh7u"]
[ext_resource type="TileSet" uid="uid://c1syn18mxx1w3" path="res://Scenes/cave.tres" id="8_ya6dj"]
[ext_resource type="FontFile" uid="uid://cxa6focq4crhl" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="9_6xb3a"]

[sub_resource type="Curve2D" id="Curve2D_5ghul"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -70, 998, 0, 0, 0, 0, 2072, 998)
}
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_hb3te"]
atlas = ExtResource("2_p5l33")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_clqtg"]
atlas = ExtResource("2_p5l33")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_km3au"]
atlas = ExtResource("2_p5l33")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ikk5"]
atlas = ExtResource("2_p5l33")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_52nmb"]
atlas = ExtResource("2_p5l33")
region = Rect2(180, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs7kr"]
atlas = ExtResource("2_p5l33")
region = Rect2(225, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypude"]
atlas = ExtResource("2_p5l33")
region = Rect2(270, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_c42oq"]
atlas = ExtResource("2_p5l33")
region = Rect2(315, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd01q"]
atlas = ExtResource("2_p5l33")
region = Rect2(360, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_f64sc"]
atlas = ExtResource("2_p5l33")
region = Rect2(405, 0, 45, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_rkbo1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb3te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clqtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km3au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ikk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52nmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs7kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypude")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c42oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd01q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f64sc")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ra1hy")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2(-160, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
z_index = -3
position = Vector2(-16, -8)
scale = Vector2(5, 5)
texture = ExtResource("2_qlx58")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.75, 0.9)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = 1
texture = ExtResource("3_tshe0")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.7)
motion_offset = Vector2(1080, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("4_rjyvq")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.625, 0.8)
motion_offset = Vector2(1080, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("5_0706j")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -2
motion_scale = Vector2(0.25, 0.25)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("6_1bh7u")
centered = false

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-8, -1008)
format = 2

[node name="Foreground" type="TileMapLayer" parent="TileMap"]
z_index = 1
use_parent_material = true
position = Vector2(42, -64)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD//xgAAAABAAEAAAAAABgAAAABAAEAAAABABgAAAABAAEAAAACABgAAAABAAEAAAADABgAAAABAAEAAAAEABgAAAABAAEAAAAFABgAAAABAAEAAAAGABgAAAABAAEAAAAHABgAAAABAAEAAAAIABgAAAABAAEAAAAJABgAAAABAAEAAAAKABgAAAABAAEAAAALABgAAAABAAEAAAAMABgAAAABAAEAAAANABgAAAABAAEAAAAOABgAAAABAAEAAAAPABgAAAABAAEAAAAQABgAAAABAAEAAAARABgAAAABAAEAAAASABgAAAABAAEAAAATABgAAAABAAEAAAAUABgAAAABAAEAAAAVABgAAAABAAEAAAAWABgAAAABAAEAAAAXABgAAAABAAEAAAAYABgAAAABAAEAAAD//xkAAAABAAIAAAAAABkAAAABAAIAAAABABkAAAABAAIAAAACABkAAAABAAIAAAADABkAAAABAAIAAAAEABkAAAABAAIAAAAFABkAAAABAAIAAAAGABkAAAABAAIAAAAHABkAAAABAAIAAAAIABkAAAABAAIAAAAJABkAAAABAAIAAAAKABkAAAABAAIAAAALABkAAAABAAIAAAAMABkAAAABAAIAAAANABkAAAABAAIAAAAOABkAAAABAAIAAAAPABkAAAABAAIAAAAQABkAAAABAAIAAAARABkAAAABAAIAAAASABkAAAABAAIAAAATABkAAAABAAIAAAAUABkAAAABAAIAAAAVABkAAAABAAIAAAAWABkAAAABAAIAAAAXABkAAAABAAIAAAAYABkAAAABAAIAAAD//xoAAAABAAMAAAAAABoAAAABAAMAAAABABoAAAABAAMAAAACABoAAAABAAMAAAADABoAAAABAAMAAAAEABoAAAABAAMAAAAFABoAAAABAAMAAAAGABoAAAABAAMAAAAHABoAAAABAAMAAAAIABoAAAABAAMAAAAJABoAAAABAAMAAAAKABoAAAABAAMAAAALABoAAAABAAMAAAAMABoAAAABAAMAAAANABoAAAABAAMAAAAOABoAAAABAAMAAAAPABoAAAABAAMAAAAQABoAAAABAAMAAAARABoAAAABAAMAAAASABoAAAABAAMAAAATABoAAAABAAMAAAAUABoAAAABAAMAAAAVABoAAAABAAMAAAAWABoAAAABAAMAAAAXABoAAAABAAMAAAAYABoAAAABAAMAAAA=")
tile_set = ExtResource("8_ya6dj")

[node name="BarPath" type="Path2D" parent="."]
position = Vector2(0, -225)
curve = SubResource("Curve2D_5ghul")

[node name="PathFollow2D" type="PathFollow2D" parent="BarPath"]
position = Vector2(-70, 998)
loop = false

[node name="BaronBar" type="AnimatedSprite2D" parent="BarPath/PathFollow2D"]
self_modulate = Color(1.2, 1.2, 1.5, 1)
position = Vector2(20, -40)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_rkbo1")
animation = &"run"
autoplay = "run"
frame_progress = 0.285592

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 540.0
offset_right = 1240.0
offset_bottom = 601.0
theme_override_fonts/font = ExtResource("9_6xb3a")
theme_override_font_sizes/font_size = 60
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressNumber" type="Label" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 620.0
offset_right = 984.0
offset_bottom = 666.0
theme_override_fonts/font = ExtResource("9_6xb3a")
theme_override_font_sizes/font_size = 45
text = "0%"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
